# rbp

./: .gitignore  Cargo.toml  Dockerfile  build_builder.sh  build_fns  builder.Dockerfile  env_sample  rpar.ipynb  rpar.py  run_local  rustfmt.toml  ui.Dockerfile
.github/workflows/: master.yml  pr.yml  rust.yml
builder/: Dockerfile
core/: Cargo.toml
core/src/: lib.rs
release/: service
service/: Cargo.toml  README.md  rpar.py
service/src/: actix_anyhow.rs  main.rs
ui/: Cargo.toml  README.md  bundle.js  index.html  nginx.conf  package.json  rollup.config.js  styles.css  tailwind.config.js
ui/src/: app.rs  components.rs  lib.rs  services.rs
ui/src/app/: services.rs
ui/src/components/: ticker_input.rs  ui_router.rs  weights_calculator.rs
ui/src/services/: rpb.rs  rpb_service.rs  yahoo.rs
