[package]
name = "core"
version = "0.1.0"
authors = ["Alex Lunacharskii <alun@katlex.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]
client = [ ]
server = [ ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }