[package]
name = "service"
version = "0.1.0"
authors = ["alunacharskii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "^2.2"
actix-web = "^3.3"
anyhow = "^1.0"
dotenv = "^0.15"
env_logger = "^0.8"
listenfd = "^0.3"
qstring = "0.7.2"

[dependencies.pyo3]
version = "^0.13"
features = ["auto-initialize"]
