[package]
name = "service"
version = "0.1.0"
authors = [
    "Alex Lunacharskii <alun@katlex.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-rt = "1.1"
actix-web = "3.3.2"
anyhow = "1.0"
core = { path = "../core", features = ["server"] }
dotenv = "0.15"
env_logger = "0.8"
listenfd = "0.3"
log = "0.4"
pyo3 = { version = "0.13", features = ["auto-initialize"] }
reqwest = { version = "0.10", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = { version = "0.8", features = ["actix"] }
