[package]
name = "ui"
version = "0.1.0"
authors = [
    "Alex Lunacharskii <alun@katlex.com>"
]
categories = ["gui"]
description = "Web UI for diet calculator"
edition = "2018"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.31"
cfg-if = "0.1.10"
chrono = { version = "0.4", features = ["wasmbind", "js-sys", "serde"] }
core = { path = "../core", features = ["client"] }
http = "0.2"
js-sys = "0.3.41"
log = "0.4.6"
once_cell = "1.8"
serde = { version = "^1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde_qs = "^0.8"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.14"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["Window", "Location", "History", "HtmlFormElement"] }
yew = "0.17.2"
yew-router = "0.14.0"
yewtil = "0.3.0"